<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrdersActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="100"
            android:orientation="vertical"
            android:paddingHorizontal="12sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/orderNumberLabel"
                    style="@style/allcaps_label"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="16sp"
                    android:paddingTop="150sp"
                    android:text="@string/order_number_label" />

                <Spinner
                    android:id="@+id/selectedOrderSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8sp"
                    android:layout_marginTop="16sp"
                    android:paddingTop="13sp"
                    android:paddingBottom="13sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/orderListLabel"
                style="@style/allcaps_label"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="16sp"
                android:layout_weight="1"
                android:paddingTop="150sp"
                android:text="@string/order_list_label" />

            <ListView
                android:id="@+id/orderItemList"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingStart="16sp"
            android:paddingTop="16sp"
            android:paddingEnd="16sp"
            android:paddingBottom="16sp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="100"
                android:orientation="vertical"
                android:paddingHorizontal="0sp"
                android:paddingVertical="0sp">

                <TextView
                    android:id="@+id/orderTotalLabel"
                    style="@style/generic_label"
                    android:text="@string/order_total_label"
                    android:textAllCaps="true" />

                <TextView
                    android:id="@+id/orderTotalDisplay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_price"
                    android:textColor="@android:color/primary_text_light"
                    android:textSize="32sp" />
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/cancelThisOrder"
                style="@android:style/Widget.DeviceDefault.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="62dip"
                android:paddingHorizontal="28sp"
                android:text="@string/order_cancel_order_label"
                android:textAllCaps="false"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>