<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SandwichActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="100">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="12sp">

                <TextView
                    android:id="@+id/orderNumberLabel"
                    style="@style/allcaps_label"
                    android:layout_marginTop="16sp"
                    android:paddingTop="150sp"
                    android:text="@string/bread_label" />

                <RadioGroup
                    android:id="@+id/breadGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/proteinLabel"
                    style="@style/allcaps_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    android:text="@string/protein_label" />

                <RadioGroup
                    android:id="@+id/proteinGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/addonLabel"
                    style="@style/allcaps_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    android:text="@string/sandwich_addons_label" />

                <LinearLayout
                    android:id="@+id/orderItemListContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"></LinearLayout>

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="bottom"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="0sp"
                android:paddingVertical="0sp">

                <TextView
                    android:id="@+id/orderTotalLabel"
                    android:text="@string/subtotal"
                    style="@style/generic_label" />

                <TextView
                    android:id="@+id/orderTotalDisplay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$0.00"
                    android:textColor="@android:color/primary_text_light"
                    android:textSize="32sp" />
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/cancelThisOrder"
                style="@android:style/Widget.DeviceDefault.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="138dip"
                android:minHeight="62dip"
                android:text="@string/add_to_cart"
                android:textAllCaps="false"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>