<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/donutRowLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/donut_image"
                android:layout_width="110sp"
                android:layout_height="150sp"

                android:maxWidth="100dp"
                android:maxHeight="100dp"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:layout_weight="100"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/donut_flavor_title"
                    style="@style/allcaps_label"
                    android:layout_width="81dp"
                    android:layout_marginTop="10sp"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/donut_flavor_title"
                    android:textColor="@color/design_default_color_secondary_variant"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/donut_flavor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0sp"
                    android:textColor="@color/material_dynamic_primary0"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/donut_type_title"
                    style="@style/allcaps_label"
                    android:layout_width="81dp"
                    android:layout_marginTop="5sp"
                    android:fontFamily="sans-serif-thin"
                    android:paddingTop="15sp"
                    android:text="@string/donut_type_title"
                    android:textColor="@color/design_default_color_secondary_variant"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/donut_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0sp"
                    android:textColor="@color/material_dynamic_primary0"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="20sp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/donut_price_title"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/donut_price_title"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/donut_price"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layoutDirection="rtl"
                android:orientation="vertical">

                <Button
                    android:id="@+id/add_btn"
                    android:layout_width="50sp"
                    android:layout_height="100sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8sp"
                    android:text="@string/add_button_symbol" />

                <Spinner
                    android:id="@+id/donut_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_marginTop="8dp"
                    android:entries="@array/donut_quantity_selection"
                    android:gravity="end"
                    android:layoutDirection="ltr" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>