<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/ru_cafe_tile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ru_cafe_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ru_cafe_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ru_cafe" />

        <TextView
            android:id="@+id/order_prompt_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_items_view"
            android:textAlignment="center"
            android:textSize="25sp"
            android:layout_marginBottom="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="100dp"
            >

            <ImageButton
                android:id="@+id/donut_btn"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/apple_donut"
                android:layout_weight="1"
                android:scaleType="fitCenter"/>

            <ImageButton
                android:id="@+id/coffee_btn"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/apple_coffee"
                android:layout_weight="1"
                android:scaleType="fitCenter"/>

            <ImageButton
                android:id="@+id/sandwich_btn"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/apple_sandwich"
                android:layout_weight="1"
                android:scaleType="fitCenter"/>
        </LinearLayout>

        <TextView
            android:id="@+id/view_cart_orders_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_cart_orders_title"
            android:textAlignment="center"
            android:textSize="25sp"
            android:layout_marginBottom="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <ImageButton
                android:id="@+id/cart_btn"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/apple_cart" />

            <ImageButton
                android:id="@+id/orders_btn"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/apple_list"
                android:layout_weight="1"
                android:scaleType="fitCenter"/>


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>